# simple-snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make.sh  run.sh
data/: apple.aseprite  data.csv  portalTiles.aseprite  testMap.csv  tiles.aseprite
src/: apple.cpp  apple.hpp  engine.cpp  engine.hpp  font_manager.cpp  font_manager.hpp  game_session.cpp  game_session.hpp  map.cpp  map.hpp  map_manager.cpp  map_manager.hpp  particle_data.cpp  particle_data.hpp  particle_manager.cpp  particle_manager.hpp  particle_system.cpp  particle_system.hpp  portal.cpp  portal.hpp  range.cpp  range.hpp  snake.cpp  snake.hpp  texture_manager.cpp  texture_manager.hpp  tiles.cpp  tiles.hpp  tiles_manager.cpp  tiles_manager.hpp  utils.cpp  utils.hpp
src/managers/: font_manager.hpp  map_manager.cpp  map_manager.hpp  particle_manager.cpp  particle_manager.hpp  texture_manager.hpp  tiles_manager.cpp
